# api_nginx_demo

./: .gitignore  Dockerfile  README.md  command.sh  docker-compose.yml  experiement.py  main.py  pyproject.toml  user_data.sh  user_data_script.sh
.github/workflows/: deploy_to_ec2.yml
app/: main.py
cdk/: app.py  ec2_stack.py
ml_expriment/: experiement.py
nginx/: default.conf  nginx.conf
